# maplibre-clone-lite

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SPEC.md  STATUS.md  TASKS.md  opencode.json
.hermes/plans/: 2026-07-02_map-renderer-v2.md
.opencode/: opencode.json
compiler/: CMakeLists.txt
compiler/src/: geometry_clip.cpp  geometry_clip.h  main.cpp  mbtiles_writer.cpp  mbtiles_writer.h  osm_reader.cpp  osm_reader.h  style.cpp  style.h  tile_baker.cpp  tile_baker.h  tile_rasterizer.cpp  tile_rasterizer.h  webp_encoder.cpp  webp_encoder.h
compiler/tests/: rasterizer_smoke.cpp
compiler/tools/: crop_pbf.cpp
data/: style.json  test_scene.osm_data
desktop/: CMakeLists.txt
desktop/src/: MapWidget.cpp  MapWidget.h  main.cpp
desktop_app/: CMakeLists.txt
desktop_app/src/: main.cpp
docs/: PLAN.md  api-reference.md  architecture.md  developer-guide.md  task-1.md  task-12.md  task-13-14.md  task-15-16.md  task-17.md  task-18.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8-9-10.md
engine/: CMakeLists.txt
engine/include/map_renderer/: camera.h  color_table.h  debug_log.h  engine.h  geometry_builder.h  gl_check.h  osm_loader.h  osm_types.h  platform.h  renderer.h  tile_cache.h  tile_id.h  tile_loader.h
engine/include/maprender/: c_api.h  mercator.h  types.h
engine/src/: c_api.cpp  camera.cpp  context.h  engine.cpp  geometry_builder.cpp  mbtiles_reader.cpp  mbtiles_reader.h  osm_loader.cpp  placeholder.cpp  renderer.cpp  renderer.h  tile_cache.cpp  tile_cache.h  tile_loader.cpp  viewport.cpp  viewport.h  webp_decoder.cpp  webp_decoder.h
engine/src/glad/include/glad/: glad.h
engine/src/glad/src/: glad.c
engine/src/shaders/: fill_frag.h  fill_vert.h
engine/tests/: make_fixture.cpp  make_highzoom_fixture.cpp  snapshot.cpp  test_cache.cpp  test_render.cpp  test_viewport.cpp  tile_dump.cpp  tile_sampler.cpp
engine/tests/fixtures/: highzoom.webp.mbtiles  sample.webp.mbtiles
specs/: HLD.md  LLD.md  README.md  REQUIREMENTS.md  TASKS.md
src/: building_data.h  main.cpp  mvt_parser.h  osm_loader.h  render_data.h  style_engine.h  test_mvt.cpp
src/core/: camera.cpp  camera.h  camera_ubo.h  debug_log.h  input_state.h  vulkan_context.cpp  vulkan_context.h  window.cpp  window.h
src/data/: geometry_builder.cpp  geometry_builder.h  osm_loader.cpp  osm_loader.h  osm_types.h  style_engine.cpp  style_engine.h
src/graphics/: buffer.cpp  buffer.h  descriptor.cpp  descriptor.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h
src/proto/: osm_data.proto
src/render/: renderer.cpp  renderer.h
src/shaders/: building.frag  building.vert  fill.frag  fill.vert  ground.frag  ground.vert  line.frag  line.vert  line3d.frag  line3d.vert  triangle.vert
src/shaders/2d/: fill.frag  fill.vert  ground.frag  ground.vert  road.vert
src/shaders/3d/: building.frag  building.vert
tests/: CMakeLists.txt  building_test.cpp  minimal_test.cpp  minimal_vulkan.cpp  minimal_window.cpp  simple_triangle.cpp  step_vulkan.cpp  test_building.cpp  test_camera.cpp  test_camera_ubo.cpp  test_color_table.cpp  test_dummy.cpp  test_engine.cpp  test_geometry_builder.cpp  test_input_state.cpp  test_integration.cpp  test_json.cpp  test_main.cpp  test_mvt.cpp  test_osm.cpp  test_osm_loader.cpp  test_placeholder.cpp  test_platform.cpp  test_python_extractor.py  test_render.cpp  test_renderer.cpp  test_shaders.cpp  test_style.cpp  test_style_engine.cpp  test_tile_cache.cpp  test_tile_types.cpp  test_triangle.cpp  triangle_test.cpp  working_triangle.cpp
tools/: compile_shaders.sh  extract_geometry.py  generate_test_data.py  osm_data.proto  preprocess.py  requirements.txt
