cmake_minimum_required(VERSION 3.20)
project(map_renderer VERSION 2.0.0 LANGUAGES C CXX)

# ── C++ standard ──────────────────────────────────────────────────────
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ── Compiler flags ────────────────────────────────────────────────────
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Allow tests to find engine includes
include_directories(${CMAKE_SOURCE_DIR}/engine/include)

# ── Dependencies ──────────────────────────────────────────────────────

# GLM (header-only math library)
include(FetchContent)
FetchContent_Declare(
    glm
    GIT_REPOSITORY https://github.com/g-truc/glm.git
    GIT_TAG        1.0.1
)
FetchContent_MakeAvailable(glm)

# Google Test
FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG        v1.17.0
)
set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# GLAD — vendored (pre-generated for OpenGL 3.3 Core)
add_library(glad_gl_core_33 STATIC
    engine/src/glad/src/glad.c
)
target_include_directories(glad_gl_core_33
    PUBLIC
        engine/src/glad/include
)
if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(glad_gl_core_33 PRIVATE -Wno-pedantic)
endif()

# Protobuf
find_package(Protobuf REQUIRED)

# Protobuf 35+ depends on Abseil, but the CMake module target does not
# propagate those libraries. Use pkg-config to get the full link set.
find_package(PkgConfig REQUIRED)
pkg_check_modules(PROTOBUF REQUIRED protobuf IMPORTED_TARGET)

# zstd
find_package(zstd REQUIRED)

# SDL2 (desktop only)
find_package(SDL2 REQUIRED)

# OpenGL (desktop only)
find_package(OpenGL REQUIRED)

# ── Protobuf codegen ──────────────────────────────────────────────────
set(PROTO_DIR "${CMAKE_SOURCE_DIR}/tools")
set(PROTO_FILE "${PROTO_DIR}/osm_data.proto")
set(PROTO_GEN_DIR "${CMAKE_BINARY_DIR}/generated")

# Generate C++ sources
set(PROTO_CC  "${PROTO_GEN_DIR}/osm_data.pb.cc")
set(PROTO_H   "${PROTO_GEN_DIR}/osm_data.pb.h")
add_custom_command(
    OUTPUT "${PROTO_CC}" "${PROTO_H}"
    COMMAND ${CMAKE_COMMAND} -E make_directory "${PROTO_GEN_DIR}"
    COMMAND ${Protobuf_PROTOC_EXECUTABLE}
        --proto_path="${PROTO_DIR}"
        --cpp_out="${PROTO_GEN_DIR}"
        "${PROTO_FILE}"
    DEPENDS "${PROTO_FILE}"
    COMMENT "Generating C++ protobuf sources"
)

# Generate Python module
add_custom_command(
    OUTPUT "${PROTO_DIR}/osm_data_pb2.py"
    COMMAND ${Protobuf_PROTOC_EXECUTABLE}
        --proto_path="${PROTO_DIR}"
        --python_out="${PROTO_DIR}"
        "${PROTO_FILE}"
    DEPENDS "${PROTO_FILE}"
    COMMENT "Generating Python protobuf module"
)
add_custom_target(proto_python ALL
    DEPENDS "${PROTO_DIR}/osm_data_pb2.py"
)

# C++ protobuf sources are generated by a custom_command and included by
# engine sources (osm_loader.cpp, tile_loader.cpp). Wrap the generated
# files in a custom target and make engine depend on it so the headers
# exist before any engine source compiles (clean-build correctness).
add_custom_target(proto_cpp DEPENDS "${PROTO_CC}" "${PROTO_H}")

# ── Subdirectories ────────────────────────────────────────────────────
enable_testing()
add_subdirectory(engine)
add_subdirectory(desktop_app)
add_subdirectory(tests)

# ── Add protobuf sources to engine ────────────────────────────────────
target_sources(engine PRIVATE "${PROTO_CC}")
target_include_directories(engine PUBLIC "${PROTO_GEN_DIR}")
add_dependencies(engine proto_cpp)
